[gd_scene load_steps=2 format=2]

[ext_resource path="res://source/mini_games/candy_store/PickupObject.gd" type="Script" id=1]

[node name="PickupObject" type="RigidBody2D"]
input_pickable = true
gravity_scale = 10.0
script = ExtResource( 1 )

[connection signal="input_event" from="." to="." method="_on_PickupObject_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_PickupObject_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_PickupObject_mouse_exited"]
